--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       </li>
                       <li>
                         <i class="day-icon" data-feather="cloud-rain"></i
-                        ><span class="day-name">Fryday</span
+                        ><span class="day-name">Friday</span
                         ><span class="day-temp">19°C</span>
                       </li>
                       <div class="clear"></div>
